# pixelforge-lite

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
pixelforge_litemodel/: __init__.py  models.py  pipeline.py  presets.py  tuning.py  utils.py
pixelforge_litemodel/palettes/: __init__.py
pixelforge_litemodel/palettes/data/: cga_16.json  endesga_32.json  gameboy_4.json  nes_54.json  pico8_16.json  snes_256.json  sweetie_16.json
pixelforge_litemodel/stages/: __init__.py  input_analyzer.py  preprocessor.py  quantizer.py  resampler.py
